--- a/poplib/src/main/res/layout/pop_popwindow_layout.xml
+++ b/poplib/src/main/res/layout/pop_popwindow_layout.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/pop_menu_bg">
 
     <ListView
         android:id="@+id/pop_list"
         android:layout_width="115dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/pop_popwindow_bg"
         android:divider="@drawable/pop_divider_line"
         android:overScrollMode="never"
         android:scrollbarStyle="outsideOverlay"/>
